2024-08-27T01:39:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10570174731 # 492
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-27
* notice: last 14d: unq all: 18 58
* notice: prev accum: outdated-unq outdated-all / unq all: 759 4256 / 778 4317
* notice: next accum: outdated-unq outdated-all / unq all: 761 4261 / 779 4319
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +18 -0 -0 / 2 18
* notice: removed / changed dates: [2024-08-12] / [2024-08-26]

2024-08-26T12:40:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10559930214 # 491
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-26
* notice: last 14d: unq all: 18 60
* notice: prev accum: outdated-unq outdated-all / unq all: 759 4256 / 777 4301
* notice: next accum: outdated-unq outdated-all / unq all: 759 4256 / 778 4317
* notice: prev exec diff / last date diff / accum: unq all: +1 +16 -0 -0 / +1 +16 -0 -0 / 1 16
* notice: removed / changed dates: [] / [2024-08-26]

2024-08-26T01:39:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10552031162 # 490
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-26
* notice: last 14d: unq all: 17 44
* notice: prev accum: outdated-unq outdated-all / unq all: 759 4256 / 776 4295
* notice: next accum: outdated-unq outdated-all / unq all: 759 4256 / 777 4301
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -1 -1 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [] / [2024-08-12 2024-08-25]

2024-08-25T01:44:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10543163065 # 488