@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-27T01:39:27Z",
+  "timestamp" : "2024-08-27T12:40:29Z",
   "count_outdated" : 4261,
   "uniques_outdated" : 761,
-  "count" : 4319,
-  "uniques" : 779,
+  "count" : 4325,
+  "uniques" : 780,
   "views" : [
     {
       "timestamp": "2024-08-15T00:00:00Z",
@@ -67,6 +67,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-08-27T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
