@@ -1,6 +1,6 @@
 {
-  "count": 58,
-  "uniques": 18,
+  "count": 64,
+  "uniques": 19,
   "views": [
     {
       "timestamp": "2024-08-15T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2024-08-26T00:00:00Z",
       "count": 18,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-08-27T00:00:00Z",
+      "count": 6,
+      "uniques": 1
     }
   ]
 }
