@@ -1,3 +1,12 @@
+2024-08-27T12:40:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10578302652 # 493
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-27
+* notice: last 14d: unq all: 19 64
+* notice: prev accum: outdated-unq outdated-all / unq all: 761 4261 / 779 4319
+* notice: next accum: outdated-unq outdated-all / unq all: 761 4261 / 780 4325
+* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
+* notice: removed / changed dates: [] / [2024-08-27]
+
 2024-08-27T01:39:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10570174731 # 492
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-27
